# crewbot

./: .gitignore  README.md  crew_engine.py  diag_comm.py  play.py  ppo.py  ppo.sbatch  program.md  pyproject.toml  run_big.sh  run_redesign.sh  run_solvable.sh  selfplay.py  selfplay.sbatch  slurm_run.sbatch  test_fcp.py  test_other_play.py  test_vec_consistency.py  train.py  train.sbatch  vec_engine.py  vec_selfplay.py
